Changed toList() from streams tests